2004-10-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (__mloop_handle_action_with_mi):
	do not "post" a submenu menu item it the submenu does not exist

2004-10-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__handle_bpress_on_managed):
	do not draw the decorations pressed in if executing a function is
	forbidden

	* libs/Parse.c (CopyToken):
	fixed parsing of delimiters

2004-10-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (GetDeskNumber):
	fixed MoveToDesk without argument

2004-10-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	re-formatted and some spelling corrections

	* fvwm/colorset.c (CMD_CleanupColorsets):
	(CMD_Colorset):
	* fvwm/builtins.c (CMD_Colorset):
	(CMD_CleanupColorsets):
	moved functions to colorset.c

2004-10-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Parse.c (CopyToken):
	skip any whitespace before a delimiter; this allows to have spaces
	before the commas in an option list

2004-10-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_reshape_border):
	re-shaping shaded windows no longer unshades them
	re-shaping unshaded windows on pages other than 0 0 no longer moves
	them out of the current page

2004-10-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__cr_detect_icccm_move):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/builtins.c (CMD_BugOpts):
	new BugOpts option DebugCRMotionMethod for ConfigureRequest debugging

	* fvwm/move_resize.c (__move_loop):
	(__resize_window):
	query the pointer position in the move loop when an
	EnterNotify/LeaveNotify event arrives; same change in resize loop.

	* NEWS:
	* configure.in:
	increased version to 2.5.13
	released 2.5.12

	* NEWS:
	* configure.in:
	updated for 2.5.12 release

	* fvwm/frame.c (frame_create_move_resize_args):
	fixed xemacs growing or shrinking when title height changed; this was
	caused by calculating the old client window geometry using the new
	title dimensions; query the window size instead
